--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.10.2",
-    "next": "^14.1.4",
+    "next": "latest",
     "next-plugin-antd-less": "^1.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -17,7 +17,6 @@
     "swiper": "^11.0.3",
     "swr": "^2.2.4"
   },
-  "type": "module",
   "engines": {
     "node": ">=18"
   },
