--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "swiper": "^11.0.3",
     "swr": "^2.2.4"
   },
-  
   "engines": {
     "node": ">=18"
   },
@@ -27,6 +26,7 @@
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
     "babel-plugin-import": "^1.13.8",
+    "esm": "^3.2.25",
     "typescript": "5.2.2"
   }
 }
