--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@babel/runtime": "^7.24.1",
     "antd": "^5.10.2",
     "next": "latest",
     "next-plugin-antd-less": "^1.8.0",
